# GreenProject

./: .json  ANCHOR_RESOLUTION_PLAN.md  FIX_BUILD_ISSUES.md  LAST_COMMIT_ANALYSIS.md  README.md  RUN_PROGRAM.md  SOLANA_INSTALL_ALTERNATIVES.md  SOLANA_SETUP.md  fix-avm-symlink.sh
client/: Cargo.toml  arbitrage.sh
client/src/: arb.rs  lib.rs  main.rs  pool.rs  utils.rs  websocket.rs
client/src/pool_utils/: base.rs  orca.rs  stable.rs
client/src/pools/: aldrin.rs  mercurial.rs  orca.rs  saber.rs  serum.rs
client/src/tests/: quotes.rs
mainnet-fork/: init_new_scrape.sh  new_scrape.ts  package-lock.json
program/programs/tmp/src/swaps/: aldrin.rs  mercurial.rs  orca.rs  saber.rs  serum.rs
scanner/: Cargo.toml  dexes.json  tokens.json
scanner/config/: config.toml
scanner/src/: arb_logger.rs  arbitrage.rs  config.rs  main.rs  price_fetcher.rs  saber_pools.rs  ws_manager.rs
scanner/src/dex_sources/: birdeye.rs  dexscreener.rs  fluxbeam.rs  jupiter.rs  meteora.rs  mod.rs  openbook.rs  orca.rs  phoenix.rs  raydium.rs
